--- a/settings.json
+++ b/settings.json
@@ -7,16 +7,16 @@
 	"anticall": true,
 	"auto_welcome_msg": true,
 	"auto_leave_msg": true,
-	"prefix": ".",
+	"prefix": "#",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"ALPHABOT",
-	"thumb":"thumbnail_1.jpg",
-	"thumbnail":"thumbnail_2.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
+	"ownerNumber": "6285213510153",
+	"ownerNumberr": "6285213510153",
+	"cr": "@WhatsApp",
+	"ownername": "Aditxyz",
+	"botname":"publicbot",
+	"thumb":"thumbnail1.jpg",
+	"thumbnail":"thumbnail2.jpg",
+	"fakethumb":"thumbnail3.jpg", 
 	"donasi":"donasi.jpg",
-	"fake": " 「  ALPHABOT  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  Aditbot  」\nCreated By @Aditxyz"
 }
