--- a/settings.json
+++ b/settings.json
@@ -14,9 +14,9 @@
 	"cr": "@WhatsApp",
 	"ownername": "Aditxyz",
 	"botname":"publicbot",
-	"thumb":"thumbnail1.jpg",
-	"thumbnail":"thumbnail2.jpg",
-	"fakethumb":"thumbnail3.jpg", 
+	"thumb":"Picsart_22-01-13_21-13-14-726.jpg",
+	"thumbnail":"Picsart_22-01-13_21-13-14-726.jpg",
+	"fakethumb":"Picsart_22-01-13_21-13-14-726.jpg", 
 	"donasi":"donasi.jpg",
 	"fake": " 「  Aditbot  」\nCreated By @Aditxyz"
 }
